Todos los tests funcionales menos el de analytics

--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "migrate:backend": "cd DeliverUS-Backend && npm run migrate",
     "test:backend": "npm run migrate:backend && cd DeliverUS-Backend && npm test",
     "start:backend": "cd DeliverUS-Backend && npm start"
+  },
+  "dependencies": {
+    "package-lock.json": "^1.0.0",
+    "package.json": "^2.0.1"
   }
 }
